<?xml version="1.0" encoding="utf-8"?>
<!DOCTYPE resources [
    <!ENTITY appname "flyDetect">
    <!ENTITY author "Jonas Reinholdt">
    <!ENTITY email "jonaspr@ifi.uio.no">
]>

<resources>
    <string name="app_name">&appname;</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">&appname; - A master thesis project by &author;</string>
    <string name="nav_header_subtitle">&email;</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_developer">Developer</string>
    <string name="menu_settings">Settings</string>

    <string name="enable_app">Enable &appname;</string>
    <string name="acceleration_display">%1$.2f m/s\u00B2</string>
    <string name="pressure_display">%1$.2f hPa</string>
    <string name="load_sensor_file">Load sensor file</string>

    <string name="sensorFileTitle">Title: %1$s</string>
    <string name="duration">Duration: %1$s</string>
    <string name="samples">Samples: %1$s</string>
    <string name="quality">Quality: %1$s</string>
    <string name="accelerometer_rate">Accelerometer: %1$s</string>
    <string name="barometer_rate">Barometer: %1$s</string>
    <string name="metadata">Metadata:</string>
    <string name="clear">Clear</string>
    <string name="sampling_rates">Sampling rates (can be very inaccurate):</string>
    <string name="markers">Markers:</string>
    <string name="sensor_file_loaded">Sensor file loaded, physical sensors will not be used</string>
    <string name="flyingStateTrue">Flying!</string>
    <string name="forceFlightFalse">Force stop flight</string>
    <string name="forceFlightTrue">Force flight</string>
    <string name="flyingStateFalse">Not flying</string>

    <!-- Flight history related -->
    <string name="flight_history">Flight history</string>
    <string name="start_time">Start time: %1$s</string>
    <string name="flight_duration">Duration: %1$s</string>
    <string name="forced_start">Forced start</string>
    <string name="forced_end">Forced end</string>
    <string name="delete_flight_confirmation">
        Are you sure you want to delete this flight? This action is irreversible.
    </string>
    <string name="flight_delete_error">Something went wrong, unable to delete flight</string>

    <!-- Dialog -->
    <string name="confirmation">Confirmation</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="force_flight_message">
        Are you sure you want to force the flight status to %1$s? This can cause problems with the
        detection.
    </string>
    <string name="no_flights_registered">No flights registered</string>
    <string name="sensorRequirement">
        &appname; requires both an accelerometer and a barometer to work. Without one or both, the
        app will not function properly.
    </string>
    <string name="fileNotFound">Selected file was not found. Try to select the file again.</string>
    <string name="nextAnalysis">Next analysis in %1$s</string>
    <string name="airplane">Airplane</string>
</resources>