<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="no.uio.ifi.jonaspr.flydetect.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_developer"
        android:name="no.uio.ifi.jonaspr.flydetect.ui.developer.DeveloperFragment"
        android:label="@string/menu_developer"
        tools:layout="@layout/fragment_developer" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="no.uio.ifi.jonaspr.flydetect.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />
    <fragment
        android:id="@+id/nav_flight_history"
        android:name="no.uio.ifi.jonaspr.flydetect.ui.history.FlightHistoryFragment"
        android:label="@string/flight_history"
        tools:layout="@layout/fragment_flight_history" />
</navigation>